--- a/content/2. Creación de un Dataset.md
+++ b/content/2. Creación de un Dataset.md
@@ -3,8 +3,8 @@ Para poder entrenar una red neuronal, debemos tener antes un dataset, un conjunt
 En el caso de detección de objetos los datos que vamos a necesitar son imágenes con sus correspondientes etiquetas. En las etiquetas vienen definidos los píxeles a los que pertenece el objeto u objetos que aparecen en las imágenes.
 
 Hay varios tipos de etiquetas pero vamos ha desarrollar únicamente dos:
-- [[Creación de un Dataset#Object Detection|| Object Detection (Detección de objetos)]]
-- [[Creación de un Dataset#Instance Segmentation|| Instance Segmentation (Segmentación de instancias)]]
+- [[2. Creación de un Dataset#Object Detection|| Object Detection (Detección de objetos)]]
+- [[2. Creación de un Dataset#Instance Segmentation|| Instance Segmentation (Segmentación de instancias)]]
 A su vez también existen varios formatos en los que se pueden escribir estas etiquetas, pero nos centraremos únicamente en los formatos [COCO](https://cocodataset.org/) y en el formato de YOLO
 
 Estos tipos de anotación nos permiten crear etiquetas para los dos tipos que vamos a ver.
@@ -45,8 +45,8 @@ Las etiquetas necesarias para Object Detection son los rectángulos que incluyen
 ```
 
 Obviamente, no vamos a etiquetar las imágenes picando código, para ello existen aplicaciones que nos facilitan el trabajo, os voy a hablar sobre dos:
-- [[Creación de un Dataset#LabelStudio|LabelStudio]]
-- [[Creación de un Dataset#Roboflow|Roboflow]]
+- [[2. Creación de un Dataset#LabelStudio|LabelStudio]]
+- [[2. Creación de un Dataset#Roboflow|Roboflow]]
 # [LabelStudio](https://labelstud.io)
 LabelStudio es una herramienta que debemos ejecutar localmente en nuestro ordenador con python.
 
