--- a/content/3. YOLO (You Only Look Once).md
+++ b/content/3. YOLO (You Only Look Once).md
@@ -12,7 +12,7 @@ Para ellos debemos instalarla en un entorno de Python:
 pip install ultralytics
 ```
 
-Antes de entrenar al modelo necesitamos un dataset, para crear uno revise el capitulo [[Creación de un Dataset]]
+Antes de entrenar al modelo necesitamos un dataset, para crear uno revise el capitulo [[2. Creación de un Dataset|Creación de un Dataset]]
 
 Una vez tengamos el dataset usaremos este código para entrenar al modelo.
 ```python title=train.py
@@ -37,7 +37,7 @@ pip install opencv-python
 
 Y utilizamos la librería para crear una app que con la cámara de nuestro ordenador utilice YOLO para detectar los objetos que aparecen en escena.
 
-```python title=opencv.py fold=true
+```python title=opencv.py
 import cv2
 
 import numpy as np
